samples/_failures_safe/1761195725_a8d5be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1a0a8af.c: In function ‘print_stats’:
./samples/SAFE/__tmp_d1a0a8af.c:136:12: error: missing terminating " character
  136 |     printf("Debug entries: %
      |            ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d1a0a8af.c:136:5: error: expected expression at end of input
  136 |     printf("Debug entries: %
      |     ^~~~~~
./samples/SAFE/__tmp_d1a0a8af.c:136:5: error: expected declaration or statement at end of input
